Fix WYSIWYG clipping on list - some initial responsive css

--- a/frontend/src/components/collection/CollectionDetailUI/style.scss
+++ b/frontend/src/components/collection/CollectionDetailUI/style.scss
@@ -100,6 +100,10 @@
         grid-area: sidebar;
         padding: 0;
 
+        @media (max-width: 500px) {
+            display: none;
+        }
+
         .wr-sidebar-stretch {
             padding: 0;
         }
