--- a/frontend/src/components/collection/ListHeaderUI/style.scss
+++ b/frontend/src/components/collection/ListHeaderUI/style.scss
@@ -8,7 +8,7 @@
     }
 
     .wr-truncate {
-        max-width: 50rem;
+        max-width: 59rem;
     }
 
     .banner {
